--- a/spells/вспышка.md
+++ b/spells/вспышка.md
@@ -13,7 +13,4 @@
 |Спасбросок| Стойкость нейтрализует|
 |Устойчивость к Магии| Да|
 
-Этот кантрип создает поток света. Если
-вы направляете свет струей прямо в
-одно существо, это существо ошарашено на 1 минуту до тех пор, пока не
-пройдет успешную проверку Стойкости. Слепые существа, а также те, которые уже были ошарашены, не поражаются эффектом вспышки.
+Этот кантрип создает поток света. Если вы направляете свет струей прямо в одно существо, это существо ошарашено на 1 минуту до тех пор, пока не пройдет успешную проверку Стойкости. Слепые существа, а также те, которые уже были ошарашены, не поражаются эффектом вспышки.
