--- a/spells/высвобождение.md
+++ b/spells/высвобождение.md
@@ -13,11 +13,4 @@
 |Спасброски| Воля нейтрализует; смотрите текст|
 |Устойчивость к Магии| Да|
 
-Это заклинание заставляет экстрапланарное существо вернутся на свой родной план, в случае если оно провалит
-специальный спасбросок Воли (КС=
-КС спасброска заклинания – КХП существа и + ваш уровень заклинателя).
-Если заклинание проходит успешно,
-то существо мгновенно выбрасывается
-в свое родное измерение. Существует
-20% шанс того что изгнанное существо
-попадет в другой план.
+Это заклинание заставляет экстрапланарное существо вернутся на свой родной план, в случае если оно провалит специальный спасбросок Воли (КС= КС спасброска заклинания – КХП существа и + ваш уровень заклинателя). Если заклинание проходит успешно, то существо мгновенно выбрасывается в свое родное измерение. Существует 20% шанс того что изгнанное существо попадет в другой план.
