--- a/spells/галлюцинационарная-земля.md
+++ b/spells/галлюцинационарная-земля.md
@@ -14,16 +14,4 @@
 |Устойчивость к Магии| Нет|
 |Материальный Компонент| Камень, веточка и кусочек зеленого растения.|
 
-Вы создаете реально выглядящую местность со звуками и запахами, похожую
-на иные виды природной местности.
-Так, открытые поля или дороги могут
-быть замаскированы под болото, холм,
-расселину, или иную сложную или невозможную для прохождения местность. Пруд можно сделать похожим
-на лужайку с травой, а пропасть под
-пологий склон, усыпанный острыми
-камнями овраг под широкую, гладкую
-дорогу. Здания, снаряжения или су-
-
-щества в пределах зоны не исчезают
-из поля зрения и не меняются в своем
-внешнем виде.
+Вы создаете реально выглядящую местность со звуками и запахами, похожую на иные виды природной местности. Так, открытые поля или дороги могут быть замаскированы под болото, холм, расселину, или иную сложную или невозможную для прохождения местность. Пруд можно сделать похожим на лужайку с травой, а пропасть под пологий склон, усыпанный острыми камнями овраг под широкую, гладкую дорогу. Здания, снаряжения или существа в пределах зоны не исчезают из поля зрения и не меняются в своем внешнем виде.
