--- a/spells/героизм-увеличенный.md
+++ b/spells/героизм-увеличенный.md
@@ -7,7 +7,4 @@
 |Компоненты| В, С|
 |Длительность| 1 мин./уровень|
 
-Заклинание действует также как и героизм, но существо получает +4 бонус
-морали к броскам атаки, спасброскам
-и проверкам навыков, иммунитет к эффектам страха и временные хит-поинты
-количеством=вашему уровню заклинателя (максимум 20).
+Заклинание действует также как и героизм, но существо получает +4 бонус морали к броскам атаки, спасброскам и проверкам навыков, иммунитет к эффектам страха и временные хит поинты количеством=вашему уровню заклинателя (максимум 20).
