--- a/spells/героизм.md
+++ b/spells/героизм.md
@@ -13,6 +13,4 @@
 |Спасбросок| Воля нейтрализует (безвредно)|
 |Устойчивость к Магии| Да (безвредно)|
 
-Это заклинание вдохновляет одно существо на подвиги и великую отвагу в
-битве. Цель получает +2 бонус морали
-к броскам атаки, спасброскам и проверкам навыков.
+Это заклинание вдохновляет одно существо на подвиги и великую отвагу в битве. Цель получает +2 бонус морали к броскам атаки, спасброскам и проверкам навыков.
