--- a/spells/гигантские-насекомые.md
+++ b/spells/гигантские-насекомые.md
@@ -13,30 +13,7 @@
 |Спасбросок| Нет|
 |Устойчивость к Магии| Да|
 
-Вы способны превратить трех обычных
-сороконожек, двух нормальных пауков
-или одного обычного скорпиона в гораздо большее по размеру существо.
-Лишь один тип насекомых может быть
-трансформирован (поэтому за одно
-применение вы сможете одновременно увеличить или сороконожку, или
-паука), и увеличены до одного и того
-же размера. Размер до которого может
-быть увеличено насекомое зависит от
-вашего уровня; смотрите ниже таблицу.
-В Справочнике Монстров приведены
-игровые параметры для сороконожек,
-пауков и скорпионов, а также для других видов насекомых.
-Любое гигантское насекомое, создан-ное при помощи этого заклинания
-не будет нападать на вас, но ваш контроль над такими существами ограничен простыми командами («Атакуй»,
-«Защищай», «Стой» и т.д.). Приказы о
-нападении только на определенных существ, или охране против опреде-ленного вхождения слишком сложны для
-понимания насекомым. Если не приказано делать ещё что либо, гигантское
-насекомое нападает на кого-либо и что-
-
-либо вблизи него.
-МП по своему желанию может расширить влияние этого заклинания на
-другие виды насекомых, арахнид и т.д.,
-таких как муравьи, пчелы, жуки, богомолы и осы.
+Вы способны превратить трех обычных сороконожек, двух нормальных пауков или одного обычного скорпиона в гораздо большее по размеру существо. Лишь один тип насекомых может быть трансформирован (поэтому за одно применение вы сможете одновременно увеличить или сороконожку, или паука), и увеличены до одного и того же размера. Размер до которого может быть увеличено насекомое зависит от вашего уровня; смотрите ниже таблицу. В Справочнике Монстров приведены игровые параметры для сороконожек, пауков и скорпионов, а также для других видов насекомых. Любое гигантское насекомое, создан-ное при помощи этого заклинания не будет нападать на вас, но ваш контроль над такими существами ограничен простыми командами («Атакуй», «Защищай», «Стой» и т.д.). Приказы о нападении только на определенных существ, или охране против опреде ленного вхождения слишком сложны для понимания насекомым. Если не приказано делать ещё что либо, гигантское насекомое нападает на кого-либо и что-либо вблизи него. МП по своему желанию может расширить влияние этого заклинания на другие виды насекомых, арахнид и т.д., таких как муравьи, пчелы, жуки, богомолы и осы.
 Уровень
 Заклинателя
 9-й или ниже
