--- a/spells/гипноз.md
+++ b/spells/гипноз.md
@@ -13,22 +13,4 @@
 |Спасбросок| Воля нейтрализует|
 |Устойчивость к Магии| Да|
 
-Ваши жесты и монотонная речь (заунывное пение) зачаровывают ближайших существ, заставляя их остановиться и смотреть только на вас. Вдобавок,
-можно использовать их неотрывное
-внимание, чтобы сделать какое-то предложение или попросить о чем-то болееменее правдоподобном. Бросьте 2d4,
-чтобы определить сколько существ попало под эффект. Существа с более низким КХП поражаются первыми, чем с
-большим. Подвержены эффекту только
-те, кто может видеть или слышать заклинателя, но они не обязательно должны понимать его речь.
-Если заклинание используется в боевой ситуации, каждая цель получает +2
-бонус к спасброскам. Если заклинанием
-воздействовать на одно единственное
-существо вне боевого времени, то его
-спасбросок делается со штрафом –2.
-Пока существо зачаровано этим заклинанием, его отношетние стано-вится более дружелюбным на 2 категории
-(смотрите Изменение Отношения НИП
-стр. 71). Это позволяет обратиться к
-нему с какой-либо просьбой (принимается, что вы можете с ним общаться).
-Просьба должна быть краткой и разумной. Даже после окончания действия
-заклинания, существо сохраняет новые
-отношения к заклинателю, но только относительно этой определенной
-просьбы.
+Ваши жесты и монотонная речь (заунывное пение) зачаровывают ближайших существ, заставляя их остановиться и смотреть только на вас. Вдобавок, можно использовать их неотрывное внимание, чтобы сделать какое-то предложение или попросить о чем-то болееменее правдоподобном. Бросьте 2d4, чтобы определить сколько существ попало под эффект. Существа с более низким КХП поражаются первыми, чем с большим. Подвержены эффекту только те, кто может видеть или слышать заклинателя, но они не обязательно должны понимать его речь. Если заклинание используется в боевой ситуации, каждая цель получает +2 бонус к спасброскам. Если заклинанием воздействовать на одно единственное существо вне боевого времени, то его спасбросок делается со штрафом –2. Пока существо зачаровано этим заклинанием, его отношетние стано-вится более дружелюбным на 2 категории (смотрите Изменение Отношения НИП стр. 71). Это позволяет обратиться к нему с какой-либо просьбой (принимается, что вы можете с ним общаться). Просьба должна быть краткой и разумной. Даже после окончания действия заклинания, существо сохраняет новые отношения к заклинателю, но только относительно этой определенной просьбы.
