--- a/spells/гипнотизирующий-узор.md
+++ b/spells/гипнотизирующий-узор.md
@@ -14,18 +14,4 @@
 |Устойчивость к Магии| Да|
 |Материальный Компонент| Сверкающая палочка с фимиамом или кристальный жезл, наполненный фосфоресцирующим материалом.|
 
-Вьющийся образ неуловимых огоньков
-волнами расходится в воздухе, зачаровывая существ, попавших в эту область.
-Воздействует на существ, чей общий
-КХП=2d4+уровень заклинателя (максимум 10). Существа с более низким КХП
-поражаются первыми, а если КХП у
-
-всех одинаковый, раньше загипнотизированы те, кто ближе к источнику
-гипнотизирования. Если КХП больше,
-заклинание не действует и потрачено
-зря. Пораженные существа зачарованы
-цветным образом узора. Слепые существа не могут быть поражены.
-Для чародеев и магов не требуется
-вербального компонента для сотворения заклинания, но бард должен петь,
-играть музыку или декламировать в
-определенном ритме в качестве вербального компонента.
+Вьющийся образ неуловимых огоньков волнами расходится в воздухе, зачаровывая существ, попавших в эту область. Воздействует на существ, чей общий КХП=2d4+уровень заклинателя (максимум 10). Существа с более низким КХП поражаются первыми, а если КХП у всех одинаковый, раньше загипнотизированы те, кто ближе к источнику гипнотизирования. Если КХП больше, заклинание не действует и потрачено зря. Пораженные существа зачарованы цветным образом узора. Слепые существа не могут быть поражены. Для чародеев и магов не требуется вербального компонента для сотворения заклинания, но бард должен петь, играть музыку или декламировать в определенном ритме в качестве вербального компонента.
