--- a/spells/глиф-опеки-увеличенный.md
+++ b/spells/глиф-опеки-увеличенный.md
@@ -6,7 +6,4 @@
 |Уровень| Жр 6|
 |Материальный Компонент| Вы очерчиваете глиф ладаном, который вначале должен быть осыпан измельченным брильянтом, стоимостью как минимум 400 зм.|
 
-Это заклинание действует также как и
-глиф опеки, за исключением того, что
-увеличенный взрывающийся глиф наносит до 10d8 повреждений, а увеличенный глиф с заклинанием способен хранить в себе заклинания до 6-го уровня
-включительно.
+Это заклинание действует также как и глиф опеки, за исключением того, что увеличенный взрывающийся глиф наносит до 10d8 повреждений, а увеличенный глиф с заклинанием способен хранить в себе заклинания до 6-го уровня включительно.
