--- a/spells/глиф-опеки.md
+++ b/spells/глиф-опеки.md
@@ -14,81 +14,6 @@
 |Устойчивость к Магии| Нет (объект) и Да; смотрите текст|
 |Материальный Компонент| Вы очерчиваете глиф ладаном, который вначале должен быть осыпан измельченным брильянтом, стоимостью как минимум 200 зм.|
 
-Эта могущественная надпись повреждает того кто входит, проходит или открывает опекаемую территорию или
-объект. Глиф опеки может охранять
-мост или проход, опекать портал, быть
-ловушкой в сундуке или ящике, и т.д.
-Вы устанавливаете условия опе-ки.
-Обычно, любое существо, вхо-дящее в
-опекаемую территорию или открывающее опекаемый объект без произнесения пароля (который вы устанавливаете
-при активации заклинания), субъект эффектов магии, которую глиф в себе хранит. Альтернативно или в дополнение к
-паролю, глифы можно устанавливать в
-соответствии с физическими характеристиками (такими как вес и рост) или
-типом, подтипом и видом существа (например необычный, дроу или красный
-дракон). Глифы также можно устанавливать в соответствии с добром, злом,
-законом или хаосом, или позволить
-проходить только тем, кто принадлежит
-вашей религии. Он не может быть установлен в соответствии с классом, Кубиками Хит-Поинтов или уровнем. Глифы
-нормально реагируют на невидимых
-существ, но не инициируется если через проходят существа путешествуя
-эфирно. На одну и туже территорию не
-может быть установлено несколько глифов. Однако, если в шкафе есть три выдвижных ящичка, то на каждый можно
-наложить отдельный глиф.
-При активации заклинания вы окутываете узором из волнистых, слабомерцающих линий охраняющий знак. Глиф
-может быть размещен в любой форме
-и размере, лишь бы помещался в пределах допустимой для вас опекаемой
-площади. Когда заклинание окончено,
-глиф и узоры становятся практически
-невидимыми.
-Глифы не возможно сактивировать
-или обойти с помощью физического
-или магического зондирования, хотя
-их можно рассеять. Сбить с толку, полиморф и не определение (и подобные
-магические эффекты) способны одурачить глиф, хотя не магические маскировки и подобные способы этого сделать не могут.
-Чтение магии позволит идентифицировать глиф опеки с проверкой Искусства Магии против КС 13. Идентификация глифа не разрядит его, но позволит
-вам узнать о его сущности (версию, тип
-наносимых повреждений, какое заклинание содержит).
-МП может решить, что вам может
-быть доступно лишь определенный тип
-глифов, связанных непосредственно с
-вашим богом. Он или она также может
-ввести новые разновидности глифов, в
-соответствии с правилами магических
-разработок в Руководстве Мастера
-Подземелий.
-|К Вниманию| Магические ловушки|
-типа глиф опеки тяжело заметить и обезвредить. Вор (только) способен пройти
-проверку Поиска чтобы заметить глиф
-и Блокировка Устройств, чтобы обезвредить его. КС в каждом из случаев бу-
-
-дет составлять 25+уровень заклинания,
-или 28 в случае глифом опеки.
-В зависимости от выбранной версии,
-глиф может или взрываться, или активировать заклинание.
-|Взрывающийся Глиф| Взрывающийся|
-глиф наносит 1d8 пунктов повреждений нарушителю за каждые два уровня
-заклинателя (максимум 5d8), и всем,
-кто находится в пределах 1,5 м от него
-или неё. Эти повреждения могут быть
-звуковыми, кислотными, холодными,
-огненными или электрическими (выбор заклинателя, устанавливается при
-активации). Каждое поражаемое существо получает право пройти проверку
-Рефлекса, чтобы перенести только половину повреждений. Устойчивость к
-Магии нормально применяется против
-этого эффекта.
-|Глиф с Заклинанием| Вы способны|
-вложить любое несущее повреждение
-заклинание, но только 3-го или ниже
-уровня. Все особенности зависящие
-от уровня заклинателя у заклинания
-учитываются в момент активации заклинания. Если заклинание целевое,
-оно нацелено на незваного гостя. Если
-заклинание поражает зону или имеет
-аморфный эффект (такой как у облака),
-центром зоны или эффекта является
-незваный гость. Если заклинание призывает существ, они появляются как
-можно ближе к незваному гостю, и нападают на него. Спасброски и устойчивость к магии действует нормально, за
-исключением того, что КС основан на
-уровне заклинания хранимого в глифе.
+Эта могущественная надпись повреждает того кто входит, проходит или открывает опекаемую территорию или объект. Глиф опеки может охранять мост или проход, опекать портал, быть ловушкой в сундуке или ящике, и т.д. Вы устанавливаете условия опе-ки. Обычно, любое существо, вхо-дящее в опекаемую территорию или открывающее опекаемый объект без произнесения пароля (который вы устанавливаете при активации заклинания), субъект эффектов магии, которую глиф в себе хранит. Альтернативно или в дополнение к паролю, глифы можно устанавливать в соответствии с физическими характеристиками (такими как вес и рост) или типом, подтипом и видом существа (например необычный, дроу или красный дракон). Глифы также можно устанавливать в соответствии с добром, злом, законом или хаосом, или позволить проходить только тем, кто принадлежит вашей религии. Он не может быть установлен в соответствии с классом, Кубиками Хит-Поинтов или уровнем. Глифы нормально реагируют на невидимых существ, но не инициируется если через проходят существа путешествуя эфирно. На одну и туже территорию не может быть установлено несколько глифов. Однако, если в шкафе есть три выдвижных ящичка, то на каждый можно наложить отдельный глиф. При активации заклинания вы окутываете узором из волнистых, слабомерцающих линий охраняющий знак. Глиф может быть размещен в любой форме и размере, лишь бы помещался в пределах допустимой для вас опекаемой площади. Когда заклинание окончено, глиф и узоры становятся практически невидимыми. Глифы не возможно сактивировать или обойти с помощью физического или магического зондирования, хотя их можно рассеять. Сбить с толку, полиморф и не определение (и подобные магические эффекты) способны одурачить глиф, хотя не магические маскировки и подобные способы этого сделать не могут. Чтение магии позволит идентифицировать глиф опеки с проверкой Искусства Магии против КС 13. Идентификация глифа не разрядит его, но позволит вам узнать о его сущности (версию, тип наносимых повреждений, какое заклинание содержит). МП может решить, что вам может быть доступно лишь определенный тип глифов, связанных непосредственно с вашим богом. Он или она также может ввести новые разновидности глифов, в соответствии с правилами магических разработок в Руководстве Мастера Подземелий. |К Вниманию| Магические ловушки| типа глиф опеки тяжело заметить и обезвредить. Вор (только) способен пройти проверку Поиска чтобы заметить глиф и Блокировка Устройств, чтобы обезвредить его. КС в каждом из случаев будет составлять 25+уровень заклинания, или 28 в случае глифом опеки. В зависимости от выбранной версии, глиф может или взрываться, или активировать заклинание. |Взрывающийся Глиф| Взрывающийся| глиф наносит 1d8 пунктов повреждений нарушителю за каждые два уровня заклинателя (максимум 5d8), и всем, кто находится в пределах 1,5 м от него или неё. Эти повреждения могут быть звуковыми, кислотными, холодными, огненными или электрическими (выбор заклинателя, устанавливается при активации). Каждое поражаемое существо получает право пройти проверку Рефлекса, чтобы перенести только половину повреждений. Устойчивость к Магии нормально применяется против этого эффекта. |Глиф с Заклинанием| Вы способны| вложить любое несущее повреждение заклинание, но только 3-го или ниже уровня. Все особенности зависящие от уровня заклинателя у заклинания учитываются в момент активации заклинания. Если заклинание целевое, оно нацелено на незваного гостя. Если заклинание поражает зону или имеет аморфный эффект (такой как у облака), центром зоны или эффекта является незваный гость. Если заклинание призывает существ, они появляются как можно ближе к незваному гостю, и нападают на него. Спасброски и устойчивость к магии действует нормально, за исключением того, что КС основан на уровне заклинания хранимого в глифе.
 
 
