--- a/spells/глухота-слепота.md
+++ b/spells/глухота-слепота.md
@@ -13,6 +13,4 @@
 |Спасбросок| Стойкость Нейтрализует|
 |Устойчивость к Магии| Да|
 
-На ваше усмотрение, чтобы наложить
-на существо слепоту или глухоту, вы
-призываете силы угнетающие жизнь.
+На ваше усмотрение, чтобы наложить на существо слепоту или глухоту, вы призываете силы угнетающие жизнь.
