--- a/spells/гнев-закона.md
+++ b/spells/гнев-закона.md
@@ -13,16 +13,4 @@
 |Спасбросок| Воля частично; смотрите текст|
 |Устойчивость к Магии| Да|
 
-Вы становитесь проводником силы закона, который поражает ваших врагов.
-Эта сила принимает форму трехмерной
-энергетической решетки. Данное заклинание наносит повреждения только хаотичным, нейтральным (не законным)
-существам.
-Заклинание причиняет 1d8 повреждения за 2 уровня заклинателя (максимум 5d8) хаотичным существам (или
-1d6 пунктов за уровень заклинателя
-максимум 10d6, хаотичным внешним
-существам) и ошеломляет их на 1 раунд. Успешная проверка спасброска
-Воли снижает повреждения на половину и нейтрализует ошеломление.
-Заклинание наносит только 1/2 ущерба существам, которые ни хаотичны, ни
-законны и они не ошеломляются. При
-успешном спасброске Воли они могут
-уменьшить повреждения еще в половину (до 1/4 от полученных повреждений).
+Вы становитесь проводником силы закона, который поражает ваших врагов. Эта сила принимает форму трехмерной энергетической решетки. Данное заклинание наносит повреждения только хаотичным, нейтральным (не законным) существам. Заклинание причиняет 1d8 повреждения за 2 уровня заклинателя (максимум 5d8) хаотичным существам (или 1d6 пунктов за уровень заклинателя максимум 10d6, хаотичным внешним существам) и ошеломляет их на 1 раунд. Успешная проверка спасброска Воли снижает повреждения на половину и нейтрализует ошеломление. Заклинание наносит только 1/2 ущерба существам, которые ни хаотичны, ни законны и они не ошеломляются. При успешном спасброске Воли они могут уменьшить повреждения еще в половину (до 1/4 от полученных повреждений).
