--- a/spells/грация-кошки.md
+++ b/spells/грация-кошки.md
@@ -14,8 +14,4 @@
 |Устойчивость к Магии| Да|
 |Материальный Компонент| Кошачья шерсть.|
 
-Перевоплощенное существо становятся более грациозным, проворным и координированным. Заклинание дает +4
-бонус заколдованности к Ловкости, и
-при этом повышает обычные преимущества к КД, спасброскам Рефлекса, а
-также все иные способности связанные
-с Ловкостью.
+Перевоплощенное существо становятся более грациозным, проворным и координированным. Заклинание дает +4 бонус заколдованности к Ловкости, и при этом повышает обычные преимущества к КД, спасброскам Рефлекса, а также все иные способности связанные с Ловкостью.
