--- a/spells/дверь-измерений.md
+++ b/spells/дверь-измерений.md
@@ -13,34 +13,4 @@
 |Спасброски| Воля нейтрализует (объект) и Нет|
 |Устойчивость к Магии| Нет и Да (объект)|
 
-Вы можете мгновенно перенести себя
-из одного места в другое в пределах
-зоны действия заклинания. Вы всегда
-пребываете точно в то место в какое
-пожелали, просто описав его или дав
-точные координаты, как например «270
-метров строго вниз», или «360 м вверх
-
-на северо-запад под углом 45 градусов».
-После использования заклинания, вы
-не можете предпринимать какие либо
-действия до следующего хода. Вы можете пронести с собой любой объект,
-но только при условии, что его масса
-не превышает вашу максимальную нагрузку. Вы также можете взять с собой
-существо Среднего или меньшего размера (вместе со снаряжением и другими объектами не превышающими
-его максимальную нагрузку) или его
-эквивалент за каждые три уровня заклинателя. Большое существо соответствует двум Средним, а Огромное двум
-Большим и так далее. Все переносимые
-существа должны быть в физическом
-контакте друг с другом и хотя бы одно
-из них в контакте с заклинателем.
-Если место в которое вы прибыли занято каким либо объектом, то вы и все
-прибывшие с вами существа получают
-1d6 повреждений и будут отброшены
-на 30 м в ближайшее свободное пространство. Если в пределах 30 м нет
-свободного места то вы и все кто был
-перенесен с вами получают ещё 2d6
-пунктов повреждений и будут отброшены в ближайшее свободное место в
-пределах 300 м Если и в этом случае не
-найдется свободного места, то все переносят ещё 4d6 пунктов повреждений, а
-заклинание считается проваленным.
+Вы можете мгновенно перенести себя из одного места в другое в пределах зоны действия заклинания. Вы всегда пребываете точно в то место в какое пожелали, просто описав его или дав точные координаты, как например «270 метров строго вниз», или «360 м вверх на северо-запад под углом 45 градусов». После использования заклинания, вы не можете предпринимать какие либо действия до следующего хода. Вы можете пронести с собой любой объект, но только при условии, что его масса не превышает вашу максимальную нагрузку. Вы также можете взять с собой существо Среднего или меньшего размера (вместе со снаряжением и другими объектами не превышающими его максимальную нагрузку) или его эквивалент за каждые три уровня заклинателя. Большое существо соответствует двум Средним, а Огромное двум Большим и так далее. Все переносимые существа должны быть в физическом контакте друг с другом и хотя бы одно из них в контакте с заклинателем. Если место в которое вы прибыли занято каким либо объектом, то вы и все прибывшие с вами существа получают 1d6 повреждений и будут отброшены на 30 м в ближайшее свободное пространство. Если в пределах 30 м нет свободного места то вы и все кто был перенесен с вами получают ещё 2d6 пунктов повреждений и будут отброшены в ближайшее свободное место в пределах 300 м Если и в этом случае не найдется свободного места, то все переносят ещё 4d6 пунктов повреждений, а заклинание считается проваленным.
