--- a/spells/глазокус.md
+++ b/spells/глазокус.md
@@ -13,9 +13,7 @@
 |Спасбросок| Стойкость нейтрализует|
 |Устойчивость к Магии| Да|
 
-Каждый раунд вы способны нацеливаться в одно живое существо, чтобы
-поразить его волной злой силы. В зависимости от КХП жертвы эта атака
-может нести до трех эффектов.
+Каждый раунд вы способны нацеливаться в одно живое существо, чтобы поразить его волной злой силы. В зависимости от КХП жертвы эта атака может нести до трех эффектов.
 КХП
 10 и более
 5–9
@@ -26,28 +24,4 @@
 В панике, заболевший
 В коме, панике, заболевший
 
-Эффекты совокупные и действуют
-одновременно.
-|Заболевший| Внезапная боль и болезнь проносятся по телу субъекта. Заболевшее существо переносит –2 штраф|
-к броскам атаки, броскам повреждений,
-спасброскам, проверкам навыков и параметров. Существо пораженное этим
-заклинанием остается в этом состоянии
-на протяжении 10 минут/уровень заклинателя. Эффекты невозможно снять
-заклинанием излечить болезнь или излечение, но нормально работает снять
-проклятие.
-|В панике| Субъект впадает в панику|
-на 1d4 раунда. Но даже когда эффект
-паники закончен, существо остается в
-шоке на протяжении 10 минут/уровень
-заклинателя, и автоматически впадает
-в панику, если вы попадаете в его поле
-зрения на протяжении этого времени.
-Это эффект страха.
-|В коме| Субъект впадает в бессознательную кому на 10 минут/уровень заклинателя. На протяжении этого времени его невозможно разбудить никакими|
-методами рассеивания. Это не является
-эффектом сна, и поэтому у эльфов нет
-иммунитета против этого заклинания.
-Заклинание длится 1 раунд за каждые
-три уровня заклинателя. Каждый раунд
-вы должны затрачивать действие передвижения, после того как первый раз
-прицелились во врага, чтобы прицелится в нового.
+Эффекты совокупные и действуют одновременно. |Заболевший| Внезапная боль и болезнь проносятся по телу субъекта. Заболевшее существо переносит –2 штраф| к броскам атаки, броскам повреждений, спасброскам, проверкам навыков и параметров. Существо пораженное этим заклинанием остается в этом состоянии на протяжении 10 минут/уровень заклинателя. Эффекты невозможно снять заклинанием излечить болезнь или излечение, но нормально работает снять проклятие. |В панике| Субъект впадает в панику| на 1d4 раунда. Но даже когда эффект паники закончен, существо остается в шоке на протяжении 10 минут/уровень заклинателя, и автоматически впадает в панику, если вы попадаете в его поле зрения на протяжении этого времени. Это эффект страха. |В коме| Субъект впадает в бессознательную кому на 10 минут/уровень заклинателя. На протяжении этого времени его невозможно разбудить никакими| методами рассеивания. Это не является эффектом сна, и поэтому у эльфов нет иммунитета против этого заклинания. Заклинание длится 1 раунд за каждые три уровня заклинателя. Каждый раунд вы должны затрачивать действие передвижения, после того как первый раз прицелились во врага, чтобы прицелится в нового.
