--- a/spells/говорить-с-растениями.md
+++ b/spells/говорить-с-растениями.md
@@ -11,17 +11,4 @@
 |Цель| Вы|
 |Длительность| 1 мин./уровень|
 
-Вы можете понимать и общаться с растениями, включая как обычно растущие
-растения, так и существа растения. Вы
-можете задавать им вопросы и получать
-соответствующие ответы. Обычные
-растения привязаны к одному определенному месту, и лишь ограничено
-ощущают окружающую среду, и поэтому не могут дать ответ о существах
-или местах удаленных от их места расположения.
-Заклинание не делает существа растения более дружелюбными или настроенными на сотрудничество чем
-обычно. Осторожные и хитрые растения могут быть достаточно немногословны и уклончивы в своих ответах, в
-то время как более глупые могут нести
-совершенно бесполезную околесицу.
-Если существо растение настроено дружелюбно к вам, оно может располагать
-благосклонностью, и даже служить вам
-(это определяет МП).
+Вы можете понимать и общаться с растениями, включая как обычно растущие растения, так и существа растения. Вы можете задавать им вопросы и получать соответствующие ответы. Обычные растения привязаны к одному определенному месту, и лишь ограничено ощущают окружающую среду, и поэтому не могут дать ответ о существах или местах удаленных от их места расположения. Заклинание не делает существа растения более дружелюбными или настроенными на сотрудничество чем обычно. Осторожные и хитрые растения могут быть достаточно немногословны и уклончивы в своих ответах, в то время как более глупые могут нести совершенно бесполезную околесицу. Если существо растение настроено дружелюбно к вам, оно может располагать благосклонностью, и даже служить вам (это определяет МП).
