--- a/spells/грация-кошки-массовая.md
+++ b/spells/грация-кошки-массовая.md
@@ -8,6 +8,4 @@
 |Диапазон| Ближний (7,5 м+1,5 м/2 ур.)|
 |Цели| Одно существо/уровень, расстояние между двумя не более 9 м|
 
-Массовая грация кошки функционирует
-также как и грация кошки за исклю-чением того, что эффект способен распространятся на различное коли-чество
-существ.
+Массовая грация кошки функционирует также как и грация кошки за исклю-чением того, что эффект способен распространятся на различное коли-чество существ.
